hphp/hack/test/typecheck/fc_enum_8.php.like_types.exp
File "fc_enum_8.php", line 9, characters 11-13:
Enums must be int or string, not a dynamic value or a value of type Foo (Typing[4024])
